<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeanTasks</string>
    <string name="action_settings">Settings</string>
<!-- Main layout -->
    <string name="new_task">New task</string>
    <string name="tasks">TASKS</string>
    <string name="add">Add</string>
    <string name="edit_task">EDIT TASK</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="undo">Undo</string>
<!-- Menu part -->
	<string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="createAccount">Create new account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password2">Repeat password</string>
<!-- Registration text info -->
	<string name="wrong_login">Invalid username or password</string>
    <string name="empty_field">Some field is empty</string>
    <string name="not_available_login">Login is not available</string>
    <string name="service_problem">There is some problem with service, try later</string>
    <string name="hello">Hello !</string>
    <string name="introduce">Please introduce yourself</string>
    <string name="sign">Sign in</string>
    <string name="newUser">Are you new here ?</string>
    <string name="register">Register</string>
    <string name="newAccount">New account</string>
</resources>