<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/editTextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10" />

    <ProgressBar
        android:id="@+id/progressBarConnect"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/newAccount"
        android:textColor="#FF4444"
        android:textSize="40sp" 
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNewAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:minWidth="300dp"
        android:background="@drawable/edit_text"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLogin"
        android:layout_below="@+id/editTextLogin"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minWidth="300dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword1"
        android:layout_below="@+id/editTextPassword1"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minWidth="300dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password2" />

    <Button
        android:id="@+id/buttonCreateAccount"
        style="@style/ButtonLeanTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/register" />

</RelativeLayout>