<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/edit_text_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/new_task" >
    </EditText>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/edit_text_task"
        android:onClick="onClick"
        android:text="@string/add" />

    <TextView
        android:id="@+id/text_view_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_add"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/tasks"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/list_view_tasks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_tasks"
        android:layout_alignRight="@+id/text_view_tasks"
        android:layout_below="@+id/text_view_tasks"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_tasks"
        android:background="@color/darker_gray" />

</RelativeLayout>